--- a/index.html
+++ b/index.html
@@ -61,19 +61,19 @@
       Web Developer, Programmer, Designer, & Single
     </h2>
     <div class="icons">
-      <a href="#!">
+      <a href="https://www.facebook.com/profile.php?id=100008952970246" target="#">
         <i class="fab fa-facebook fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://twitter.com/rbnderoxas" target="#">
         <i class="fab fa-twitter fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://www.instagram.com/rbnderoxas/" target="#">
         <i class="fab fa-instagram fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://www.linkedin.com/in/reuben-de-roxas-6267b916b/" target="#">
         <i class="fab fa-linkedin fa-2x"></i>
       </a>
-      <a href="#!">
+      <a href="https://github.com/rbnderoxas" target="#">
         <i class="fab fa-github fa-2x"></i>
       </a>
     </div>
