--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
         </li>
         <li class="nav-item">
           <a href="contact.html" class="nav-link">
-            How to Reach Me
+            Contact
           </a>
         </li>
 
@@ -52,13 +52,13 @@
     </nav>
   </header>
 
-  <main id="home" class="home-main">
+  <main id="home" class="home-main" style="height: 100vh;">
     <h1 class="lg-heading">
       Reuben
       <span class="text-secondary">De Roxas</span>
     </h1>
     <h2 class="sm-heading">
-      Web Developer, Programmer, Designer, & Single
+      Programmer, Designer, & Web Developer
     </h2>
     <div class="icons">
       <a href="https://www.facebook.com/profile.php?id=100008952970246" target="#">
