--- a/about.html
+++ b/about.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body id="bg-img">
     <div class="overlay"></div>
     <header>
         <div class="menu-btn">
@@ -43,7 +43,7 @@
                 </li>
                 <li class="nav-item">
                     <a href="contact.html" class="nav-link">
-                        How to Reach Me
+                        Contact
                     </a>
                 </li>
 
