--- a/contact.html
+++ b/contact.html
@@ -12,7 +12,7 @@
 
 </head>
 
-<body>
+<body id="bg-img">
     <div class="overlay"></div>
     <header>
         <div class="menu-btn">
@@ -43,7 +43,7 @@
                 </li>
                 <li class="nav-item current">
                     <a href="contact.html" class="nav-link">
-                        How to Reach Me
+                        Contact
                     </a>
                 </li>
 
@@ -51,7 +51,7 @@
         </nav>
     </header>
 
-    <main id="about">
+    <main id="about" style="height: 100vh;">
         <h1 class="lg-heading">
             Contact
             <span class="text-secondary">Me</span>
@@ -60,14 +60,18 @@
             This is how you can reach me...
         </h2>
         <div class="boxes">
-            <div>
-                <span class="text-secondary">Email:</span> Johndoe@gmail.com
+            <div class="contacts">
+                <span class="text-secondary">Email</span>
+                <br>rbnderoxas@gmail.com
             </div>
-            <div>
-                <span class="text-secondary">Phone Number:</span> (555) 555 - 5555
+            <div class="contacts">
+                <span class="text-secondary">Phone Number</span>
+                <br>(555) 555 - 5555
+                <br>+63 935 - 575 - 5992
             </div>
-            <div>
-                <span class="text-secondary">Address:</span> 50 Main street, Chili Con Carne 02
+            <div class="contacts">
+                <span class="text-secondary">Address</span>
+                <br>Paciano Rizal, Bay, Laguna
             </div>
 
         </div>
